--- a/media/index.html
+++ b/media/index.html
@@ -4,42 +4,90 @@
 <head>
   <title></title>
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.min.css" rel="stylesheet">
+  <!-- <link href="./roboto.css" rel="stylesheet"> -->
+  <!-- <link href="./vuetify.min.css" rel="stylesheet"> -->
+  <!-- <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
+  <style>
+    html,
+    body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    .flex_container {
+      display: flex;
+      flex-direction: row;
+
+
+    }
+
+    .flex_drawer {
+      flex: 0 0 500px;
+    }
+
+    .flex_drawer_row {
+      flex: 1 1 0;
+    }
+
+    .flex_body {
+      flex: 1 1 0;
+    }
+  </style>
+
 </head>
 
 <body>
-  <div id='app'>
-    <v-app>
-      <v-content>
-        <v-container>
-          <v-row>
-            <v-col>
-              <v-card>
-                <v-card-title>
-                  Hello World
-                </v-card-title>
-              </v-card>
-              <v-card>
-                <v-card-title>
-                  <!--<v-btn @click="doClick()">Add game contents</v-btn>-->
-                  <v-btn @click="getScenes()">Get Scenes</v-btn>
-                </v-card-title>
-              </v-card>
-              <v-card>
-                <div v-for="scene in scenes" :key="scene">
-                  {{scene}}
+  <div id="app">
+    <div class="flex_container">
+      <div class="flex_drawer">
+        <div class="flex_container">
+          <div class="flex_drawer_row">
+            <div>
+              Scenes
+            </div>
+            <div v-for="scene in scenes" :key="scene">
+              <a href="#" @click="selectScene(scene)">{{scene}}</a>
+            </div>
+            <div>
+              <a href="#" @click="addScene()">[Add Scene...]</a>
+            </div>
+          </div>
+          <div class="flex_drawer_row">
+            Game Objects
+            <div>
+              <div v-if="scene == null">
+                Choose a Scene to see its contents
+              </div>
+              <div v-else>
+                <div>
+                  {{scene.default.name}}
                 </div>
-              </v-card>
-            </v-col>
-          </v-row>
-        </v-container>
-      </v-content>
-      {{files}}
-    </v-app>
+                <div v-for="object in scene.default.objects">
+                  <a href='#' @click="selectObject(object)">{{object.name}}<a>
+                </div>
+              </div>
+            </div>
+          </div>
 
-
+          <div class="flex_drawer_row">
+            Components
+          </div>
+        </div>
+      </div>
+      <div class="flex_body">
+        This is the body
+      </div>
+    </div>
   </div>
+
+
+  
+
+
 
   <script src='https://code.jquery.com/jquery-3.2.1.min.js'></script>
   <script src='https://unpkg.com/vue'></script>
@@ -47,22 +95,27 @@
   <script src="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.js"></script>
 
 
-  <script>
+  <script type="module">
 
     var app = new Vue({
       el: '#app',
       vuetify: new Vuetify(),
       data: {
+        scene: null,
+        gameObject: null,
         rows: [],
         vscode: {},
         files: [],
-        scenes:[],
+        scenes: [],
+        drawer: true,
+        on: true,
+        source: "https://github.com/ed-ge"
       },
       mounted() {
         this.vscode = acquireVsCodeApi();
         this.files = this.vscode.postMessage({
-          command: 'getFiles',
-          text: 'Get Files'
+          command: 'getScenes',
+          text: 'getScenes_+|'
         })
 
       },
@@ -78,7 +131,17 @@
             command: 'getScenes',
             text: 'getScenes'
           })
+        },
+        selectScene(name) {
+          console.log("Selecting scene " + name)
+          this.vscode.postMessage({ command: 'selectScene', text: name })
+        },
+        addScene() {
+
         }
+      },
+      created() {
+        this.$vuetify.theme.dark = true
       },
     });
 
@@ -91,7 +154,26 @@
           app.files = message.text;
           break;
         case 'allScenes':
+          console.log("Got scenes");
+          console.log(message.text);
           app.scenes = message.text;
+          break;
+        case 'sceneContents':
+          console.log("Got scene contents");
+          console.log(JSON.stringify(message.text, null, 2));
+          var moduleData = message.text;
+          var b64moduleData = "data:text/javascript;base64," + btoa(moduleData);
+          import(b64moduleData)
+            .then(result => {
+              console.log(JSON.stringify(result, null, 2));
+              app.scene = result;
+
+            })
+            .catch(err => {
+              console.log("Error " + err);
+            })
+
+
           break;
       }
     });
