--- a/media/index.html
+++ b/media/index.html
@@ -9,7 +9,7 @@
   <!-- <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
-  
+
   <style>
     html,
     body {
@@ -20,11 +20,31 @@
 
     }
 
+    
+
     .flex_container {
       display: flex;
       flex-direction: row;
       height: 100vh;
 
+    }
+
+    .column {
+      display: flex;
+      flex-direction: column;
+      
+    }
+
+    .row {
+      flex: 1 1 0;
+      display: flex;
+      flex-direction: row;
+    }
+
+    .half {
+      flex: 0 0 100px;
+      overflow:hidden;
+      margin-right:.1rem;
     }
 
     .flex_drawer {
@@ -93,24 +113,49 @@
               Select a GameObject to see its components
             </div>
             <div v-else>
+              <!-- <div class="column">
+                <div class="row">
+                  <div>{{gameObject.constructor.name}}</div>
+                </div>
+                <div class="row">
+                  <div class="half">Name:</div>
+                  <div class="half"><input type="text" v-model='gameObject.name'></div>
+                </div>
 
-              <div><span width="50%">Name:</span><span width="50%"> <input type="text" v-model='gameObject.name'></span>
-              </div>
-              <div>{{gameObject.constructor.name}}</div>
-              <div>X: <input type="text" v-model='gameObject.x'></div>
-              <div>Y: <input type="text" v-model='gameObject.y'></div>
-              <div>Scale X: <input type="text" v-model='gameObject.scaleX'></div>
-              <div>Scale Y: <input type="text" v-model='gameObject.scaleY'></div>
-              <div>Rotation: <input type="text" v-model='gameObject.rotation'></div>
-              <div v-for="(component,index) in gameObject.components" :key="index">
-                <div>{{component.constructor.name}}</div>
-                <div v-for="(value,index) in Object.keys(component)" :key="index">
-                  <div v-if="value!='gameObject'">
-                    <div>
-                      <span>{{value}}:</span><span> <input type="text" v-model="component[value]"></span>
+                <div class="row">
+                  <div class="half">X:</div>
+                  <div class="half"> <input type="text" v-model='gameObject.x'></div>
+                </div>
+                <div class="row">
+                  <div class="half">Y:</div>
+                  <div class="half"> <input type="text" v-model='gameObject.y'></div>
+                </div>
+                <div class="row">
+                  <div class="half">Scale X: </div>
+                  <div class="half"><input type="text" v-model='gameObject.scaleX'></div>
+                </div>
+                <div class="row">
+                  <div class="half">Scale Y:</div>
+                  <div class="half"> <input type="text" v-model='gameObject.scaleY'></div>
+                </div>
+                <div class="row">
+                  <div class="half">Rotation:</div>
+                  <div class="half"> <input type="text" v-model='gameObject.rotation'></div>
+                </div>
+                <div v-for="(component,index) in gameObject.components" :key="index">
+                  <div class="row">
+                    <div>{{component.constructor.name}}</div>
+                  </div>
+                  <div v-for="(value,index) in Object.keys(component)" :key="index">
+                    <div v-if="value!='gameObject'">
+                      <div>
+                        <div class="row">
+                          <div class="half">{{value}}:</div><div class="half"> <input type="text" v-model="component[value]"></div>
+                        </div>
+                      </div>
                     </div>
                   </div>
-                </div>
+                </div> 
               </div>
               <div>
                 <div v-for="(componentValue,index) in gameObject.componentValues" :key="index">
@@ -120,7 +165,7 @@
                     <div>Value: {{value.value}}</div>
                   </div>
                 </div>
-              </div>
+              </div>-->
 
             </div>
           </div>
@@ -141,7 +186,7 @@
 
 
   <script src="${webview.cspSource}" type="module"></script>
- 
+
 
 </body>
 
