--- a/media/index.html
+++ b/media/index.html
@@ -61,6 +61,15 @@
       background-color: #EEEEEE;
       padding: 2px;
     }
+    button{
+      width:100%;
+    }
+
+    .small_button{
+      width:20px;
+      height:20px;
+      margin:2px;
+    }
 
     .strong{
       font-weight:bold;
@@ -81,7 +90,6 @@
 
     .flex_body {
       flex: 1 1 0;
-      background-color: green
     }
 
     .section {
@@ -100,7 +108,7 @@
         <div class="flex_main_column">
           <div class="section">
             <div class="row strong">
-              Scenes
+              Menu
             </div>
             <div class="row">
               <button @click="get()">Get</button>
@@ -108,13 +116,17 @@
             <div class="row">
               <button @click="save()">Save</button>
             </div>
+          </div>
+          
+          <div class="section">
+            <div class="row strong">
+              Scenes <button class="small_button" @click="newScene()">+</button>
+            </div>
+            
             <div v-if="setup">
               <div v-for="scene in scenes" :key="scene.name" class="row">
-                <button @click="selectScene(scene)">{{scene.name}}</button>
+                <span style="width:calc(100% - 40px)"><button @click="selectScene(scene)" style="width:100%;">{{scene.name}}</button></span><span style="width:20px"><button>E</button></span><span style="width:20px"><button @click="deleteScene(scene)">D</button></span>
               </div>
-            </div>
-            <div class="row">
-              <a href="#" @click="addNewScene()">[Add Scene...]</a>
             </div>
           </div>
           <div class="section">
@@ -209,7 +221,7 @@
       </div>
       <div class="flex_body" id="canvas_parent">
 
-        <canvas id="canv" width="70vw" height="100vh"></canvas>
+        <canvas id="canv" height="100vh"></canvas>
       </div>
     </div>
   </div>
@@ -219,7 +231,7 @@
   <script src='https://unpkg.com/vue'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js'></script>
   <script src="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/ed-ge/ed-ge@7ae12bd5aa3b9a936ec64b4aba22a6cb4e2bd107/free/Base.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/ed-ge/ed-ge@9b2be443761c3a05fe369460a6dc8adc5ba45f54/free/Base.js"></script>
 
 
   <script src="${webview.cspSource}" type="module"></script>
